Fix overflowing issue

--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,10 @@ body {
     padding: .75rem 1rem;
 }
 
+#app-chat-area {
+    min-height: 0;
+}
+
 #app-chat-chatbox {
     background: #212121;
     padding: .5rem .75rem;
